<resources>
    <string name="app_name">AnimalCare</string>
    <string name="register_to_adopt">Register to adopt</string>
    <string name="log_in">Log in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="volunteer">I am a volunteer</string>
    <string name="login_as_administrator">LogIn as Administrator</string>
    <string name="log_in_admin">Admin - login</string>
    <string name="adopter">ADOPTER</string>
    <string name="username">username</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="schedule_visit">Schedule visit</string>
    <string name="logout">LogOut</string>
    <string name="actions">Actions</string>
    <string name="see_all_animals">See all animals</string>
    <string name="recommend_animals_for_you">Let us recommend animals for you</string>
    <string name="recommend_animals_for_you_2">Let us recommend animals for you! Complete the next test!</string>
    <string name="animals_you_saved">Animals you saved</string>
    <string name="volunteer_caps">VOLUNTEER</string>
    <string name="program">Program</string>
    <string name="volunteers">Volunteers</string>
    <string name="volunteer_details">Volunteer details</string>
    <string name="volunteer_email">Volunteer email</string>
    <string name="volunteer_program">Volunteer program</string>
    <string name="add_volunteer">Add volunteer</string>
    <string name="enter_starting_day">Enter starting date (dd/mm/yyyy)</string>
    <string name="starting_hour">Starting hour:</string>
    <string name="eg_9">Eg. 9</string>
    <string name="eg_14">Eg. 14</string>
    <string name="ending_hour">Ending hour:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="working_days">Working days</string>
    <string name="title_activity_add_animal">AddAnimalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="animal_details">Animal details</string>
    <string name="animals">Animals</string>
    <string name="add_animal">Add animal</string>
    <string name="add_animal_info">Add animal information</string>
    <string name="enter_arriving_date">Enter arriving date</string>
    <string name="enter_species">Enter species</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_color">Enter animal color(s)</string>
    <string name="enter_description">Enter description</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="species">Species</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="suspected_of_the_disease">Suspected of the disease</string>
    <string name="suspected_of_disease">Suspected of disease</string>
    <string name="personality">Personality</string>
    <string name="inactiv">Inactiv</string>
    <string name="active">Activ</string>
    <string name="activ_inactiv">50% activ - 50% activ</string>
    <string name="middle">Middle</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="tv_upload_pictuare_message">* Press the image above to upload animal picture</string>
    <string name="animal_informations">Animal informations</string>
    <string name="options">Options</string>
    <string name="caring_informations">Caring informations</string>
    <string name="back_to_all_animals">Back to all animals</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="saved_animals">Saved animals</string>
    <string name="recommended_animals">Recommended animals</string>
    <string name="test">Test</string>
    <string name="previous_results">Previous results</string>
    <string name="question_0">1. I would like to adopt: </string>
    <string name="answer_0_1">a dog</string>
    <string name="answer_0_2">a cat</string>
    <string name="answer_0_3">a dog or a cat</string>
    <string name="question_1">2. I am a ____ pet owner. </string>
    <string name="answer_1">first-time</string>
    <string name="answer_2">previous</string>
    <string name="answer_3">current</string>
    <string name="question_2">3. My home has no yard.</string>
    <string name="answer_2_1">true</string>
    <string name="answer_2_2">false</string>
    <string name="answer_2_3">Answer 3</string>
    <string name="question_3">4. I can allocate ____ per day for the animal.</string>
    <string name="answer_3_1">less than 1 hour</string>
    <string name="answer_3_2">less than 2 hours</string>
    <string name="answer_3_3">more than 2 hours</string>
    <string name="question_4">5. I would like for the animal to be ____ .</string>
    <string name="answer_4_1">very active</string>
    <string name="answer_4_2">active</string>
    <string name="answer_4_3">inactive</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="question_5">6. I am open to adopt an animal with special needs.</string>
    <string name="answer_5_1">true</string>
    <string name="answer_5_2">false</string>
    <string name="submit">Submit</string>
    <string name="add_visit">Add visit</string>
    <string name="choose_the_date_and_time">Choose the date and time</string>
    <string name="date">Date (dd/mm/yyyy):</string>
    <string name="hour">Hour:</string>
    <string name="visits">Visits</string>
    <string name="shelter_management">Shelter Management</string>
    <string name="number_of_volunteers">Number of volunteers</string>
    <string name="number_of_animals">Number of animals</string>
    <string name="number_of_adopters">Number of adopters</string>
    <string name="number_of_visits">Number of visits</string>
    <string name="add_ticket">Add ticket</string>
    <string name="view_tickets">View tickets</string>
    <string name="volunteer_name">Volunteer</string>
    <string name="status">Status</string>
    <string name="ticket_text">Ticket text</string>
    <string name="set_status_as_close">Set status as close</string>
    <string name="ticket_title">Ticket title</string>
    <string name="tickets">Tickets</string>
    <string name="title">Title</string>
    <string name="enter_ticket_name">Enter ticket name</string>
    <string name="text">Text</string>
    <string name="enter_ticket_text">Enter ticket text</string>
    <string name="update_animal_info">Update Animal Details</string>
    <string name="tv_change_picture_message">*Press the image above to change animal picture</string>
    <string name="mark_as_unavailable">Mark as unavailable</string>
    <string name="animal_unavailable">This animal is no longer available in the shelter.</string>
    <string name="other_info">Other info</string>
    <string name="previous_visits_added">Previous visits added</string>
    <string name="visit_details">Visit details</string>
    <string name="visit_info">Visit info</string>
    <string name="visit_date_and_hour">Visit date and hour</string>
    <string name="adopter_sentencecase">Adopter</string>
    <string name="adopter_info">Adopter info</string>
    <string name="mark_visit_as_closed">Mark visit as closed.</string>
    <string name="update_ticket">Update ticket</string>
    <string name="update_volunteer">Update volunteer</string>
    <string name="there_are_no_visits_with_status_on">There are no visits with the status ON.</string>
</resources>