
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_schema_background_2"
    tools:context=".CRUD.AddAnimalActivity">

    <TextView
        android:id="@+id/activity_add_animal_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/color_schema_light_transparent"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/add_animal_info"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="15dp"
        android:padding="10dp"
        app:cardCornerRadius="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_add_animal_tv_title"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/add_animal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_schema_background_2_transparent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/activity_add_animal_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/paw"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_upload_pictuare_message"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/activity_add_animal_et_arriving_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/white"
                    android:hint="@string/enter_arriving_date"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    />
                <EditText
                    android:id="@+id/activity_add_animal_et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/white"
                    android:hint="@string/enter_age"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    />
                <EditText
                    android:id="@+id/activity_add_animal_et_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/white"
                    android:hint="@string/enter_color"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    />
                <EditText
                    android:id="@+id/activity_add_animal_et_description"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"

                    android:background="@color/white"
                    android:hint="@string/enter_description"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/activity_add_animal_tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/gender"
                        android:padding="5dp"
                        android:textSize="20sp"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/activity_add_animal_tv_species"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/species"
                        android:padding="5dp"
                        android:textSize="20sp"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_dog"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dog" />
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_cat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cat" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/activity_add_animal_tv_personality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/personality"
                        android:padding="5dp"
                        android:textSize="20sp"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_active"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/active" />
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_activ_inactiv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/middle" />
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_inactiv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inactiv" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/activity_add_animal_tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/size"
                        android:padding="5dp"
                        android:textSize="20sp"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/small" />
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medium" />
                        <RadioButton
                            android:id="@+id/activity_add_animal_rb_big"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/big" />
                    </RadioGroup>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/activity_add_animal_cb_disease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/suspected_of_disease"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/activity_add_animal_btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/button_light"
                    android:text="@string/add_animal"
                    android:textColor="@color/white"
                    android:padding="5dp"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>